--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
   },
   "homepage": "https://github.com/DaJuukes/HempCoin-TipBot#readme",
   "dependencies": {
+    "bitcoin-core": "^2.0.0",
     "discord.js": "^11.3.0",
     "dotenv": "^6.0.0",
     "mongoose": "^5.2.6",
     "node-os-utils": "^1.0.7",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "sinon": "^6.1.5"
   },
   "devDependencies": {
     "eslint": "^5.3.0",
