--- a/.gitignore
+++ b/.gitignore
@@ -55,8 +55,8 @@ typings/
 .yarn-integrity
 
 # dotenv environment variables file
-.env
-vars.env
+*.env
+config.env
 
 # next.js build output
 .next
