--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hempcoin",
+  "name": "democrabot",
   "version": "0.0.1",
   "description": "",
   "main": "start.js",
@@ -9,17 +9,11 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/DaJuukes/HempCoin-TipBot.git"
+    "url": ""
   },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/DaJuukes/HempCoin-TipBot/issues"
-  },
-  "homepage": "https://github.com/DaJuukes/HempCoin-TipBot#readme",
+  "author": "DaJuukes",
+  "license": "MIT",
   "dependencies": {
-    "agenda": "^2.0.0",
-    "bitcoin-core": "^2.0.0",
     "discord.js": "^11.3.0",
     "dotenv": "^6.0.0",
     "mongoose": "^5.2.6",
@@ -30,13 +24,13 @@
   "devDependencies": {
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
-    "eslint": "^5.3.0",
-    "eslint-config-standard": "^11.0.0",
+    "eslint": "^5.7.0",
+    "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-mocha": "^5.0.0",
     "eslint-plugin-node": "^7.0.1",
-    "eslint-plugin-promise": "^3.8.0",
-    "eslint-plugin-standard": "^3.1.0",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0",
     "mocha": "^5.1.1"
   }
 }
